<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@drawable/background"
    android:layout_height="fill_parent" >
    
    <RelativeLayout android:id="@+id/layout_controll" 
    			  android:layout_height="wrap_content" 
    			  android:layout_width="fill_parent"
    			  android:layout_alignParentBottom="true">
    			  
    <Button android:id="@+id/fleet1_all"
    			 android:layout_height="wrap_content" 
    			 android:layout_width="wrap_content" 
    			 android:layout_alignParentLeft="true" 
    			 android:text="@string/fleet1_all"/>
    		
    			 
    <Button android:id="@+id/fleet1_reset" 
    			android:layout_height="wrap_content" 
    			android:layout_width="wrap_content" 
        		android:text="@string/fleet1_reset" 
		        android:layout_toRightOf="@+id/fleet1_all" 
		        android:layout_alignTop="@+id/fleet1_all" 
		        android:layout_alignBottom="@+id/fleet1_all" />	
    			 
    			
    <Button android:id="@+id/fleet1_next"
    			 android:layout_height="wrap_content" 
    			 android:layout_width="wrap_content" 
		        android:layout_alignParentRight="true"
		        android:text="@string/fleet1_next"
        		android:enabled="false"/>
    		
    			 
    </RelativeLayout>
    
    <ListView android:id="@android:id/list" 
    		  android:layout_width="fill_parent"
    		  android:layout_height="wrap_content" 
    		  android:layout_above="@id/layout_controll"
    		  android:layout_alignParentTop="true" />       
</RelativeLayout>